Fix VAT assignment rounding problems

Rounding problems led to non-balanced transactions. This change avoids
such a situation.

BUG: 383239
FIXED-IN: 5.0
CCMAIL: geebackhouse@gmail.com